# cproject

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Containerfile.builder  LICENSE  README.md  cproject.sh  create_project.sh  download_packages.sh  generate_cmake.sh  install.sh  run_template.sh  setup.sh  setup_vcpkg.sh
.github/workflows/: build-and-release.yml  ci.yml  release.yml  save-docker-images.yml
assets/templates/cpp/single/executable/cmake/: dependencies.cmake
cmake_template/: BuildMainExecutable.cmake  CMakeLists.txt  ConfigureTests.cmake  GlobalOptions.cmake
scripts/: cproject.sh
share/templates/cpp/single/executable/cmake/: gtest.cmake
src/: archetype.rs  build.rs  config.rs  doctor.rs  main.rs  pkg.rs  scaffold.rs  util.rs
templates/default/executable/: .gitignore  CMakeLists.txt  archetype.toml
templates/default/executable/cmake/: dependencies.cmake
templates/default/executable/src/: main.cpp
templates/default/executable/tests/: basic_test.cpp
