[package]
name = "cproject"
version = "0.1.0"
edition = "2021"
description = "C/C++ project generator & manager (Rust CLI)"
license = "MIT"
repository = "https://example.com/your/repo"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rust-embed = "8"
handlebars = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
which = "8"
chrono = "0.4"
toml = "0.8"
num_cpus = "1"
dirs = "5"
shellexpand = "3"
shlex = "1"
